test/code/test_throw_noenv.out

Fatal error: Uncaught exception 'Exception' in {{CWD}}/test/code/test_throw_noenv.php:4
Stack trace:
#0 {{CWD}}/test/code/test_throw_noenv.php(9): crash('world\'s name')
#1 {{CWD}}/test/code/test_throw_noenv.php(12): call_to_crash()
#2 {main}
  thrown in {{CWD}}/test/code/test_throw_noenv.php on line 4
